layout/Hero/hero.module.scss
@import "../../styles/mixins.scss";
@import "../../styles/variables.scss";

.Hero {
    align-items: flex-start;
    background-color: $color--gray-light;
    display: flex;
    flex-direction: column;
    height: 100vh;
    overflow: hidden;
    padding-bottom: 5vh;
    position: relative;

    &__Greetings {
        display: flex;
        flex-direction: column;
        flex: 1;
        justify-content: center;

        br {
            display: none;
        }

        @include smScreen {
            br {
                display: block;
            }
        }
    }

    &__Name {
        margin-bottom: 2rem;
    }

    &__Nickname {
        margin-bottom: 4rem;
        z-index: 1;

        span {
            position: relative;
        }

        @include smScreen {
            margin-bottom: 8rem;
        }
    }

    &__Sign {
        position: absolute;
        left: 0;
        top: 0;
        transform: translate(-20%, -20%);
        z-index: -1;
    }

    &__Cta {
        align-self: flex-start;
    }

    &__Links {
        display: flex;
        justify-content: unset;
        width: 100%;

        > *:not(:last-of-type) {
            margin-right: 2rem;
        }

        @include smScreen {
            margin: 0;
            justify-content: space-evenly;

            > * {
                margin-right: unset;
            }
        }
    }

    &__Player {
        background-color: transparent;
    }
}

